# DESC_profiling

./: .pre-commit-config.yaml  README.md  __init__.py  faster_zernike.py  noxfile.py  profile_zernike.ipynb  pyproject.toml  requirements.txt  setup.cfg  tests.py  zernike_algos.py  zernike_prata.py
.github/workflows/: ci.yml
tests/: __init__.py  test_zernike.py
