[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.8"
name = "zernike-algorithm"
version = "0.0.1"

[tool.ruff]
select = ["E", "F", "W", "B", "I", "RUF", "UP"]
ignore = [
    "E741", # variable names like "l" are pretty common for mode numbers
    "E1", "E2", "W505", # Let black handle whitespace line breaks and stuff like that
    "E731",
    "D401",
    "D105", # don't care about docstrings in __dunder__ methods
    ]
line-length = 88
